@@ -48,5 +48,4 @@ void expControl(MESSAGE_STRUCT *M);
 void pedestalRunEntryPoint(void);
 void dumpRegs(void);
 
-void doPong(unsigned p);
 #endif
