@@ -1,9 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta content="text/html; charset=ISO-8859-1"
- http-equiv="content-type">
+
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
   <title>DOMApp Status Page</title>
+
+
   <style type="">
 <!--
 body {
@@ -11,7 +13,6 @@ background-color: #F5F5CF;
 font-family: serif;
 font-size: 12pt;
 }
-
 h1 {
 text-align: center;
 font-size: 20pt;
@@ -21,7 +22,6 @@ border-style: ridge none none none;
 border-width: thin 0 0 0;
 padding: .2em 0 0 0;
 }
-
 h2 {
 font-size: 12pt;
 background-color: #FFFFFF;
@@ -29,11 +29,9 @@ border-style: ridge none none none;
 border-width: thin 0 0 0;
 padding: .2em;
 }
-
 h3 {
 font-size: 12pt;
 }
-
 .terminal {
 font: 10pt monospace;
 background-color: #FFFFFF;
@@ -42,7 +40,6 @@ border-width: thin;
 padding: .2em .2em .2em 1em;
 margin: 0 5% 0 2%;
 }
-
 .terminalOld {
 font: 10pt monospace;
 background-color: #FFFFFF;
@@ -52,166 +49,329 @@ padding: .2em .2em .2em 1em;
 white-space: pre;
 margin: 0 5% 0 2%;
 }
-
 font.todo {
 color: red;
 }
-
 .footer {
 font: 10pt monospace;
 text-align: right;
 }
-
 -->
   </style>
 </head>
+
+
 <body>
-<table style="text-align: left;" border="0" cellpadding="2"
- cellspacing="2">
+
+<table style="text-align: left;" border="0" cellpadding="2" cellspacing="2">
+
   <tbody>
+
     <tr>
-      <td style="vertical-align: top;">&nbsp; <big><big><span
- style="font-style: italic;">DOMAPP Testing Status</span></big></big><br>
+
+      <td style="vertical-align: top;">&nbsp; <big><big><span style="font-style: italic;">DOMAPP Testing Status</span></big></big><br>
+
       </td>
-      <td style="vertical-align: top;">John Jacobsen <span
- style="font-family: monospace;"></span><br>
-Last revision 6/28/2005<br>
+
+      <td style="vertical-align: top;">&nbsp; <br>
+
+      </td>
+
+      <td style="vertical-align: top;">John Jacobsen <span style="font-family: monospace;"></span><br>
+
+Last revision 9/22/2005<br>
+
       <span style="font-family: monospace;">$Id:
 domapp_test_status.html,v 1.2 2005/06/23 17:18:36 jacobsen Exp $</span><br>
+
       </td>
+
     </tr>
+
   </tbody>
 </table>
-<a href="index.html">Code Status</a> | <a href="api.html">API</a> | <a
- href="domapp_testing.html">Test SW</a> | Testing Status<br>
+
+<a href="index.html">Code Status</a> | <a href="api.html">API</a> | <a href="domapp_testing.html">Test SW</a> | Testing Status<br>
+
 <h2>TEST STATUS SUMMARY</h2>
+
 Testing of the first <a href="index.html">beta releases</a>
-have been under way since June 1, using the <a
- href="domapp_testing.html">DMT test software</a>, using the PSL Cable
-Test System (PCTS) and two hardware configurations at LBNL.&nbsp; The <a
- href="http://www.npxdesigns.com/domapp/domapp_testing.html#tests">list
-of tests</a> on that page gives an idea of what is currently being
+have been under way since June 1, using the <a href="domapp_testing.html">DMT test software</a>,
+using the PSL Cable
+Test System (PCTS) and two hardware configurations at LBNL.&nbsp;
+The <a href="http://www.npxdesigns.com/domapp/domapp_testing.html#tests">list
+of tests</a> on that page gives an idea of what is currently
+being
 tested.<br>
+
 <br>
-<h2 style="font-weight: bold;">MOST RECENT TEST RESULTS<br>
+
+<h2 style="font-weight: bold;">SUMMARY OF RECENT TEST RESULTS<br>
+
 </h2>
-<ul>
-  <li>Start date: 2005-06-26__08:43:21</li>
-  <li>DOMApp release: V00-00-06</li>
-  <li>domapp-tools release: V00-00-06<br>
-  </li>
-  <li>Test directory:&nbsp;
-pcts-hub:/home/jacobsen/domapp-tests/V00-00-06/36hrs/DMT__2005-06-26__08:43:21<br>
-  </li>
-  <li style="font-weight: bold;">Total test duration: 36 hrs</li>
-  <li style="font-weight: bold;">Total number of tests: 232,086</li>
-  <li style="font-weight: bold;">Nominal freezer temperature: -40 C
-(Iceboot gives ~ -36 C)<br>
-  </li>
-  <li style="font-weight: bold;">Number of DOMs: 12</li>
-  <li style="font-weight: bold; color: rgb(255, 0, 0);">Catastrophic
-failures (DOM crashed):&nbsp;</li>
-  <ul>
-    <li>DOM 02B crashed during "discTrigger" test after about 16
-hrs.&nbsp; All subsequent tests for that DOM failed.<br>
-    </li>
-  </ul>
-  <li style="font-weight: bold;">Minor test failures:</li>
-  <ul>
-    <li>00a (4 failures)<br>
-    </li>
-    <ul>
-      <li>missing 1 pedestal trigger for ATWD A (MISSPED)<br>
-      </li>
-      <li>get forced (pseudo-pulser) trigger when real FE pulser is on
-(UNWANT FORCED)<br>
-      </li>
-      <li>corrupt trigger type (4294967168 vs. 2) (CORRUPT TRIG)<br>
-      </li>
-      <li>MISSPED<br>
-      </li>
-    </ul>
-    <li>00b (4 failures)<br>
-    </li>
-    <ul>
-      <li>CORRUPT TRIG<br>
-      </li>
-      <li>Disc. SPE rate too low (LOWSPE)</li>
-      <li>MISSPED</li>
-      <li>CORRUPT TRIG</li>
-    </ul>
-    <li>01a (5 failures)<br>
-    </li>
-    <ul>
-      <li>MISSPED</li>
-      <li>MISSPED</li>
-      <li>Not enough hits in 1Hz heartbeat test (MISSHITS)</li>
-      <li>CORRUPT TRIG</li>
-      <li>MISSPED</li>
-    </ul>
-    <li>01b (4 failures)<br>
-    </li>
-    <ul>
-      <li>CORRUPT TRIG</li>
-      <li>CORRUPT TRIG</li>
-      <li>CORRUPT TRIG</li>
-      <li>MISSHITS</li>
-    </ul>
-    <li>02a (2 failures)<br>
-    </li>
-    <ul>
-      <li>CORRUPT TRIG</li>
-      <li>MISSPED</li>
-    </ul>
-    <li>02b -- Catastrophic failure, described above</li>
-    <li>03a (5 failures)<br>
-    </li>
-    <ul>
-      <li>MISSPED</li>
-      <li>CORRUPT TRIG</li>
-      <li>MISSPED</li>
-      <li>MISSHITS</li>
-      <li>CORRUPT TRIG</li>
-    </ul>
-    <li>10a (1 failures)<br>
-    </li>
-    <ul>
-      <li>CORRUPT TRIG</li>
-    </ul>
-    <li>11a - no failures</li>
-    <li>20a - no failures</li>
-    <li>21a - no failures</li>
-  </ul>
-</ul>
+Two 24-hour tests were run on 10 DOMs on PCTS. &nbsp;There were two
+failures where the SPE rate dropped below the expected number.
+&nbsp;Assuming the failures are representative of the average [it is
+curious that they occur on the same DOM], the test failure rate per DOM
+is something like 1/10 days. &nbsp;No catastrophic errors (DOM crashes
+or loss of communications) were observed.<br>
 <br>
-<h2 style="font-weight: bold;">OTHER KNOWN OUTSTANDING ISSUES</h2>
-<big><span style="font-weight: bold;"></span></big>
-<ul>
-  <li>Many things are not thoroughly tested yet, notably LC
-functionality, flashers, and programmable dead time.&nbsp; <br>
-  </li>
-  <li>Compressed
-data has not been thoroughly examined.</li>
-  <li>A few key messages still missing from the documentation.</li>
-  <li>Request has been made for a rework of the monitoring to
-reduce
-overall bandwidth and increase relevance of monitoring information.</li>
-  <li>Should implement raw data format so that compressed data
-can be
-compared with uncompressed in a one-to-one format.<br>
-  </li>
-</ul>
-<h2 style="font-weight: bold;">INTEGRATION STATUS<br>
-</h2>
-<big><span style="font-weight: bold;"></span></big>
-<ul>
-  <li>David Hays is currently testing the integration of domapp with
-the DOM Hub application.</li>
-  <li>DOM Main Board Software/Firmware Release Qualification Process
-document is in progress (John Joseph).<br>
-  </li>
-</ul>
+It's currently under investigation whether the test failures shown are
+due to problems in the testing software or in domapp per se.<br>
 <br>
+<h2>TEST DETAILS</h2>
+Test dates: 9/16 - 9/18, 2005<br>
 <br>
+Software Configuration:<br>
+
+<ul>
+
+  <li>domapp: V00-00-12</li>
+
+  <li>dor-driver: V02-08-01</li>
+
+  <li>domapp-tools: V00-00-10</li>
+
+</ul>
+
+Selected DOMs: 00a 00b 01a 01b 02a 02b 03a 10a 11a 20a<br>
+
+<br>
+
+DMT parameters:<br>
+
+<ul>
+
+  <li>Flasher tests enabled [-F]</li>
+
+  <li>HV tests enabled [-V]</li>
+
+  <li>Duration: 1 day [-s 86400]</li>
+
+</ul>
+
+Test results:<br>
+
+<br>
+
+<div class="terminal">
+/home/jacobsen/domapp-tests/V00-00-12/dmt-V00-00-10/DMT__2005-09-16__14:07:42/DMT.out:<br>
+
+<br>
+
+Test sequence DMT__2005-09-16__14:07:42<br>
+
+domapp-tools version V00-00-10<br>
+
+<br>
+
+Parameters:<br>
+
+DoLong&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= false<br>
+
+FPGA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+=
+flash default<br>
+
+Test Pgm&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; =
+/usr/local/bin/domapptest<br>
+
+Total duration = 86400 sec.<br>
+
+Test durations = 10 sec.<br>
+
+DoRandomize&nbsp;&nbsp;&nbsp; = TRUE<br>
+
+DoHV&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= TRUE<br>
+
+DoFlasher&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; = TRUE<br>
+
+Compr. only&nbsp;&nbsp;&nbsp; = false<br>
+
+SN
+mode&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= 4<br>
+
+Tests running in background.<br>
+
+00a (domapp00a.log): 1126984079 (Sat Sep 17 14:07:59 2005) ending
+tests, 8950 total, 0 failures.<br>
+
+00b (domapp00b.log): 1126984080 (Sat Sep 17 14:08:00 2005) ending
+tests, 9102 total, 0 failures.<br>
+
+01a (domapp01a.log): 1126984076 (Sat Sep 17 14:07:56 2005) ending
+tests, 8931 total, 0 failures.<br>
+
+01b (domapp01b.log): 1126984081 (Sat Sep 17 14:08:01 2005) ending
+tests, 8997 total, 0 failures.<br>
+
+02a (domapp02a.log): 1126984070 (Sat Sep 17 14:07:50 2005) ending
+tests, 8912 total, 0 failures.<br>
+
+02b (domapp02b.log): 1126984072 (Sat Sep 17 14:07:52 2005) ending
+tests, 9070 total, 0 failures.<br>
+
+03a (domapp03a.log): 1126984075 (Sat Sep 17 14:07:55 2005) ending
+tests, 8782 total, 0 failures.<br>
+
+10a (domapp10a.log): 1126984071 (Sat Sep 17 14:07:51 2005) ending
+tests, 8777 total, 0 failures.<br>
+
+11a (domapp11a.log): 1126984070 (Sat Sep 17 14:07:50 2005) ending
+tests, 8733 total, 0 failures.<br>
+<b>
+20a (domapp20a.log): 1126984070 (Sat Sep 17 14:07:50 2005) ending
+tests, 8939 total, 1 failures.</b><br>
+
+<br>
+
+domapp20a.log:<br>
+...<br>
+1126947716 (Sat Sep 17 04:01:56 2005) hits heartbeat_10Hz trig=2
+nhits=91<br>
+
+1126947727 (Sat Sep 17 04:02:07 2005) echo<br>
+
+1126947738 (Sat Sep 17 04:02:18 2005) sn-counts-only<br>
+
+1126947743 (Sat Sep 17 04:02:23 2005) moni state chg. (3)<br>
+
+1126947762 (Sat Sep 17 04:02:42 2005) hits heartbeat_100Hz trig=2
+nhits=273<br>
+
+1126947780 (Sat Sep 17 04:03:00 2005) Saving
+latest_short_pulserTrigger_20a.hits as caught_112694778<br>
+
+0_short_pulserTrigger_20a.hits<br>
+
+1126947780 (Sat Sep 17 04:03:00 2005) Saving
+latest_short_pulserTrigger_20a.moni as caught_112694778<br>
+
+0_short_pulserTrigger_20a.moni<br>
+
+1126947780 (Sat Sep 17 04:03:00 2005) Saving
+latest_short_pulserTrigger_20a.sum as caught_1126947780<br>
+
+_short_pulserTrigger_20a.sum<br>
+
+1126947780 (Sat Sep 17 04:03:00 2005) hits pulserTrigger trig=2 <b>FAIL:
+measured SPE discriminator rat<br>
+
+e (3 Hz) doesn't match requested rate (10 Hz)!</b><br>
+
+Short run pulserTrigger:<br>
+
+Hit file: latest_short_pulserTrigger_20a.hits<br>
+
+Original monitoring file: latest_short_pulserTrigger_20a.moni<br>
+
+...<br>
+
+<br>
+
+</div>
+
+<br>
+
+<div class="terminal">/home/jacobsen/domapp-tests/V00-00-12/dmt-V00-00-10/DMT__2005-09-17__18:53:46/DMT.out:<br>
+<br>
+
+Test sequence DMT__2005-09-17__18:53:46<br>
+
+domapp-tools version V00-00-10<br>
+
+<br>
+
+Parameters:<br>
+
+DoLong&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= false<br>
+
+FPGA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= flash default<br>
+
+Test Pgm&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; =
+/usr/local/bin/domapptest<br>
+
+Total duration = 86400 sec.<br>
+
+Test durations = 10 sec.<br>
+
+DoRandomize&nbsp;&nbsp;&nbsp; = false<br>
+
+DoHV&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= TRUE<br>
+
+DoFlasher&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; = TRUE<br>
+
+Compr. only&nbsp;&nbsp;&nbsp; = false<br>
+
+SN
+mode&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+= 4<br>
+
+Tests running in background.<br>
+
+00a (domapp00a.log): 1127087673 (Sun Sep 18 18:54:33 2005) ending
+tests, 9039 total, 0 failures.<br>
+
+00b (domapp00b.log): 1127087838 (Sun Sep 18 18:57:18 2005) ending
+tests, 9062 total, 0 failures.<br>
+
+01a (domapp01a.log): 1127087810 (Sun Sep 18 18:56:50 2005) ending
+tests, 8993 total, 0 failures.<br>
+
+01b (domapp01b.log): 1127087657 (Sun Sep 18 18:54:17 2005) ending
+tests, 8993 total, 0 failures.<br>
+
+02a (domapp02a.log): 1127087776 (Sun Sep 18 18:56:16 2005) ending
+tests, 9108 total, 0 failures.<br>
+
+02b (domapp02b.log): 1127087810 (Sun Sep 18 18:56:50 2005) ending
+tests, 9108 total, 0 failures.<br>
+
+03a (domapp03a.log): 1127087767 (Sun Sep 18 18:56:07 2005) ending
+tests, 8832 total, 0 failures.<br>
+
+10a (domapp10a.log): 1127087644 (Sun Sep 18 18:54:04 2005) ending
+tests, 8740 total, 0 failures.<br>
+
+11a (domapp11a.log): 1127087685 (Sun Sep 18 18:54:45 2005) ending
+tests, 8740 total, 0 failures.<br>
+<b>
+20a (domapp20a.log): 1127087667 (Sun Sep 18 18:54:27 2005) ending
+tests, 8809 total, 1 failures.<br>
+</b><br>
+domapp20a.log:<br>
+...<br>
+1127034127 (Sun Sep 18 04:02:07 2005) sn-counts-only<br>
+1127034142 (Sun Sep 18 04:02:22 2005) hits SNTrigger trig=2 nhits=432&nbsp; snbins=5808 sntot=2903<br>
+1127034160 (Sun Sep 18 04:02:40 2005) hits discTriggerHV trig=2 nhits=434<br>
+1127034181 (Sun Sep 18 04:03:01 2005) hits discTriggerHVCompr trig=2 nhits=607<br>
+1127034199 (Sun Sep 18 04:03:19 2005) Saving latest_short_pulserTrigger_20a.hits as caught_112703419<br>
+9_short_pulserTrigger_20a.hits<br>
+1127034199 (Sun Sep 18 04:03:19 2005) Saving latest_short_pulserTrigger_20a.moni as caught_112703419<br>
+9_short_pulserTrigger_20a.moni<br>
+1127034199 (Sun Sep 18 04:03:19 2005) Saving latest_short_pulserTrigger_20a.sum as caught_1127034199<br>
+_short_pulserTrigger_20a.sum<br>
+1127034199 (Sun Sep 18 04:03:19 2005) hits pulserTrigger trig=2 <b>FAIL: measured SPE discriminator rat<br>
+e (0 Hz) doesn't match requested rate (10 Hz)!</b><br>
+Short run pulserTrigger:<br>
+Hit file: latest_short_pulserTrigger_20a.hits<br>
+Original monitoring file: latest_short_pulserTrigger_20a.moni<br>
+...<br>
+<br>
+
+</div>
+
+<ul>
+</ul>
+
+
+<br>
+
 </body>
 </html>
